--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+.hero-wrapper{
 
+   
+}
 .name-heading,.description-heading{
     text-align: start;
     padding-top: 100px;
@@ -23,17 +26,17 @@ h1{
     font-family: 'Poppins', sans-serif;
 }
 
-.title{
+.heading-title1{
     animation-name: moveRight;
     animation-duration: 0.7s;
 }
 
-.title1{
+.heading-title2{
     animation-name: moveLeft;
     animation-duration: 0.7s;
 }
 
-.title2{
+.heading-title3{
     animation-name: moveUp;
     animation-duration: 0.7s;
 }
