--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,6 +2,11 @@
 a.navbar-brand{
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
+    font-weight: bold;
+}
+
+.navbar{
+    background-color: #FCFAF0;
 }
 
 
