--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-.hero-wrapper{
-
-   
+.bg-wrapper{
+    background-image: url('../img/bg.jpg');
+    background-size: cover;
+    width: 100%;
+    
 }
 .name-heading,.description-heading{
     text-align: start;
@@ -39,6 +41,10 @@ h1{
 .heading-title3{
     animation-name: moveUp;
     animation-duration: 0.7s;
+}
+
+.text{
+    padding-bottom: 50%;
 }
 
 
