--- a/src/styles/LineWithTitle.css
+++ b/src/styles/LineWithTitle.css
@@ -1,5 +1,5 @@
 .container-line{
-    padding-top: 100px;
+    padding-top: 60px;
     padding-bottom: 100px;
     justify-content: center;
     align-items: center;
@@ -35,8 +35,7 @@
 
 .title{
     height: 40px;
-    width: 80px;
-    
+    width: 80px;  
     left: 0;
     right: 0;
     top: 0;
@@ -44,6 +43,19 @@
     margin: auto;
     border-radius: 50%;
 
+}
 
+@media (min-width: 280px) and (max-width: 540px){
+    .title{
+        height: 20px;
+        width: 50px;  
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        border-radius: 50%;
+    
+    }
 }
 
