--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,19 +1,19 @@
 img.icons{
     width: 50px;
     height: auto;
-   
     
-}
-
-.skills-icon {
-  background-color: #EEF0F2;
-  border-radius: 50px;
-  box-shadow: 2px 1px #DADDD8;
+    
 }
 
 .skills-icon:hover{
     background-color: white;
-    
+}
+
+.skills-icon{
+    background-color: #EEF0F2;
+    padding: 10px;
+    border-radius: 50px;
+    box-shadow: 2px 1px #DADDD8;
 }
 
 h6.skills-title{
@@ -22,4 +22,8 @@ h6.skills-title{
 
 .skills-wrapper{
     padding-bottom: 50px;
+    
 }
+
+/* min-width is if the screen is larger than 
+max-width is if the screen is smaller than */
