--- a/src/styles/LineWithTitle.css
+++ b/src/styles/LineWithTitle.css
@@ -18,7 +18,7 @@
     content: '';
     position: absolute;
     margin: auto;
-    height: 1px;
+    height: 0.2px;
     background: #828282;
     width:45%;
     top: 30%;
@@ -34,6 +34,7 @@
 
 
 .title{
+    text-align: center;
     height: 40px;
     width: 80px;  
     left: 0;
@@ -41,20 +42,31 @@
     top: 0;
     bottom: 0;
     margin: auto;
+    color: black;
     border-radius: 50%;
+    
 
 }
 
 @media (min-width: 280px) and (max-width: 540px){
     .title{
-        height: 20px;
-        width: 50px;  
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
+        height: auto;
+        width: auto;
+        font-size: 12px;
+        padding-top: 3px;
         margin: auto;
         border-radius: 50%;
+    
+    }
+
+    .line::after, .line::before{
+        content: '';
+        position: absolute;
+        margin: auto;
+        height: 0.2px;
+        background: #828282;
+        width:37%;
+        top: 30%;
     
     }
 }
