--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -17,16 +17,27 @@ p {
 }
 
 .wrapper-modal{
-    background-color: #DADDD8;
+    background-color: #d9d9d9;
     height: 100%;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 10px;
-
 }
+
+img.cover-photo{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center; 
+    
+   
+}
+
+
 
 .work-wrapper{
     padding-left: 50px;
     padding-right: 50px;
+    padding-top: 10rem;
  
 }
 
