--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -18,34 +18,30 @@ img{
 }
 
 .about-wrapper{
-    
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center;  
+    align-self: center;
 }
-
-
-
-/* @media  screen and (min-width: 280px){
-    img {
-        width: 200px;
-        height: auto;
-        
-    }
-    
-}
-
-@media screen and (max-width: 1505px) {
-    img {
-        width: 400px;
-        margin: 20px;
-    }
-    
-} */
 
 
 .work-paragraph{
-    margin-top: 90px;
+    margin-top: 70px;
     color: #666666;
+}
+
+img.joyce-pic{
+    box-shadow: blue 0px 0px 0px 2px inset, 
+    rgb(255, 255, 255) 10px -10px 0px -3px, 
+    rgb(125, 125, 125) 10px -10px, 
+    rgb(255, 255, 255) 20px -20px 0px -3px, 
+    rgb(150, 150, 150) 20px -20px, 
+    rgb(255, 255, 255) 30px -30px 0px -3px, 
+    rgb(162, 162, 162) 30px -30px, 
+    rgb(255, 255, 255) 40px -40px 0px -3px, 
+    rgb(115, 115, 115) 40px -40px;
+
+    border-radius: 10px;
 }
 
 
