--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -91,3 +91,16 @@ h1{
     
 }
 
+@media (min-width: 200px) and (max-width: 600px){
+    .joyce-title{
+        font-size: 40px;
+        margin-top: auto;
+        margin-bottom: 0;
+        align-items: center;
+        justify-content: center;
+    }
+
+    h2.description{
+        font-size: 30px;
+    }
+}
