--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -6,5 +6,20 @@
     margin-bottom: 20px;
 }
 
+@media (min-width: 200px) and (max-width: 600px){
+    .education-wrapper,.org-wrapper,.career-wrapper,.skills-title,.tools-desc{
+        align-items: center;
+        text-align: center;
+    }
+
+    h4.footer-heading{
+        text-align: center;
+        font-size: 18px;
+    }
+
+    
+    
+}
+
 
 
