--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,14 +7,8 @@ footer{
 
 a.nav-link{
     color: black;
-    
-    
  
-}
-
-.footer{
-    background-color: white;
-    
+ 
 }
 
 .icon{
@@ -26,7 +20,15 @@ a.nav-link{
 
 button{
     border: 1px solid #C4C4C4;
+}
 
+@media (min-width: 300px) and (max-width: 600px){
+    .footer{
+        align-items: center;
+        text-align: center;
+        margin-top: -20px;
+    }
+    
 }
 
 
